Fixing chat icon z-index Fixing danmaku over modals Danmaku transparency option

--- a/front/src/routes/styles.css
+++ b/front/src/routes/styles.css
@@ -156,3 +156,6 @@ button:focus:not(:focus-visible) {
 .spoilertext:hover {
 	color: var(--color-text-dark);
 }
+.transparent {
+	opacity: 0.5;
+}
